full-moon/tests/cases/fail/tokenizer/wrong-place-shebang/source.lua

#!/usr/bin/env luajit

print("hello");
